fixed font, sizing, and alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,10 +2,12 @@
 
 html {
     background: aqua;
+    font-family: Lato;
 }
 
 h1 {
     text-align: center;
+    font-size: 70px;
 }
 
 #fullheader {
@@ -27,7 +29,7 @@ nav {
     align-items: center;
     justify-content: space-around;
     /* also need to change the text color to make it more readable */
-    font-size: 20px;
+    font-size: 30px;
     width: 100%;
     /* this is also going to need to fold into a hamburger stack
     once it gets small enough */
@@ -59,6 +61,16 @@ nav {
 
 aside {
     margin: auto;
+}
+
+h2 {
+    text-align: center;
+    font-size: 30px;
+}
+
+#twitterContainer{
+    display: flex;
+    justify-content: space-around;
 }
 
 @media (max-width: 760px) {
